refactor: Java 17에 도입된 .toList()으로 변경